Semantic Notification extension ChangeLog
=========================================


VERSION 1.1.2


  FEATURES:



  CHANGES:



  BUGFIXES:
	13622 - getXSDValue is deprecated
