@@ -6,8 +6,9 @@ VERSION 1.1.2
 
 
   FEATURES:
-
-
+	Feature request 14299 - allow a more fine-grained period for sending notifications
+		http://smwforum.ontoprise.com/smwbugs/show_bug.cgi?id=14299
+		Since patch level 2
 
   CHANGES:
 
